fixed overflow

--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@
     justify-content: space-between;
     align-items: center;
     margin: 25px 0;
-    width: 120%;
+    width: 100%;
 }
 
 #page1 .container header .logo {
